# rust-docker-examples

./: .dockerignore  Cargo.toml  Dockerfile.app-server  Dockerfile.integration-tests  docker-compose.yml
lib/person/: Cargo.toml
lib/person/src/: lib.rs
