[package]
name = "person"
version = "0.1.0"
authors = ["Adam Chalmers <achalmers@cloudflare.com>"]
edition = "2018"

[lib]
doctest = false

[dependencies]
actix-web = { version="3.3.2", features = ["openssl"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"]}
